--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: arm
 Version: 1.7-07
 Date: 2014-8-27
-Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
+Title: Data Analysis Using Regression and Multilevel/Hierarchical
+        Models
 Authors@R: c(person("Andrew", "Gelman", role = "aut", email = "gelman@stat.columbia.edu"),
              person("Yu-Sung", "Su", role =  c("aut", "cre"), email = "suyusung@tsinghua.edu.cn"),
              person("Masanao", "Yajima", role =  "ctb", email = "yajima@stat.ucla.edu"),
@@ -25,3 +26,7 @@ Imports: abind, methods, coda, nlme
 Description: R functions for processing lm, glm, svy.glm, merMod and polr outputs.
 URL: http://CRAN.R-project.org/package=arm
 License: GPL (>= 2)
+Packaged: 2014-08-27 07:22:03 UTC; suyusung
+NeedsCompilation: no
+Repository: CRAN
+Date/Publication: 2014-08-27 10:58:00
