--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -20,8 +20,8 @@ Author: Andrew Gelman [aut],
   Tian Zheng [ctb],
   Vicent Dorie [ctb]
 Maintainer: Yu-Sung Su <suyusung@tsinghua.edu.cn>
-Depends: R (>= 3.0.0), MASS, Matrix (>= 1.0), stats, lme4 (>= 1.0)
-Imports: abind, methods, coda, nlme
+Depends: R (>= 3.0.0), stats
+Imports: methods, coda, nlme, MASS, Matrix (>= 1.0), lme4 (>= 1.0)
 Description: R functions for processing lm, glm, svy.glm, merMod and polr outputs.
 URL: http://CRAN.R-project.org/package=arm
 License: GPL (>= 2)
